# toil_container

./: .coveragerc  .dockerignore  .gitignore  .gitmessage  .isort.cfg  .pydocstylerc  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-entrypoint.sh  example.py  extra_args  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.json  setup.py  tox.ini  travis_pypi_setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.travis/: install_singularity  install_singularity.sh
config/: setup.json
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_base.py  test_cli.py  test_commands.py  test_containers.py  test_integrations.py  test_jobs.py  test_lsf.py  test_parsers.py  test_sge.py  test_slurm.py  test_toil_container.py  test_utils.py  test_validators.py  test_version.py  utils.py
toil_container/: VERSION  __init__.py  __main__.py  base.py  cli.py  commands.py  containers.py  exceptions.py  jobs.py  lsf.py  lsf_helper.py  parsers.py  sge.py  single_machine.py  slurm.py  utils.py  validators.py
toil_container/data/: setup.json
